--- a/app/src/main/res/layout/activity_view_treatment_history.xml
+++ b/app/src/main/res/layout/activity_view_treatment_history.xml
@@ -65,6 +65,7 @@
 
     <LinearLayout
         android:orientation="horizontal"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="45dp"
@@ -90,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/apptButton"
-            android:src="@drawable/clocl1"
+            android:src="@drawable/clocl"
             android:layout_weight="8"
             android:scaleType="fitCenter"
             android:background="#00000000"
@@ -100,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/logsButton"
-            android:src="@drawable/folderfiles"
+            android:src="@drawable/folderfiles1"
             android:layout_weight="2"
             android:scaleType="fitCenter"
             android:background="#00000000"
@@ -125,7 +126,11 @@
             android:scaleType="fitCenter"
             android:background="#00000000"
             android:adjustViewBounds="true" />
+
     </LinearLayout>
+
+
+
 
     <ImageView
         android:layout_width="fill_parent"
@@ -135,90 +140,62 @@
         android:paddingLeft="10dp"
         android:layout_below="@+id/linearLayout24"
         android:layout_centerHorizontal="true" />
-
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/imageView8"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <LinearLayout
-            android:orientation="horizontal"
+        android:orientation= "vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below = "@+id/imageView8"
+        android:id="@+id/dates"
+        android:paddingTop = "11dp"
+        android:layout_centerHorizontal="true"
+        ><LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="38dp"
+        android:background="#D89CE9E5"
+        >
+        <TextView
             android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_centerHorizontal = "true"
             android:layout_height="wrap_content"
-            android:paddingLeft="45dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textSize="25dp"
-                android:text="Select type:"
-                android:id="@+id/typeTextView"/>
-            <Spinner
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:popupBackground="#000000"
-                android:id="@+id/typeSpinner"></Spinner>
-        </LinearLayout>
+            android:text = "2015"
+            android:background="#D89CE9E5"
+            android:textColor="#444444"
+            android:textSize = "28dp"
+            android:textStyle = "bold"
+            android:elevation="1dp"
+            ></TextView></LinearLayout>
         <LinearLayout
+            android:layout_marginTop="4dp"
             android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_centerHorizontal = "true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="45dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textSize="25dp"
-                android:text="Select doctor:"
-                android:id="@+id/doctorTextView"/>
-            <Spinner
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:popupBackground="#000000"
-                android:id="@+id/doctorSpinner"></Spinner>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="45dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textSize="25dp"
-                android:text="Select date:"
-                android:id="@+id/dateTextView"/>
-            <Spinner
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:popupBackground="#000000"
-                android:id="@+id/dateSpinner"></Spinner>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="45dp">
 
-            <TextView
+            android:background = "#FFFFFF">
+        <Button
+            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:text="First Quarter\n(Jan - March)"
+            android:onClick="displayHistory" />
+         <Button
+                android:layout_height="60dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textSize="25dp"
-                android:text="Select time:"
-                android:id="@+id/timeTextView" />
+                android:text="Second Quarter\n(Apr - June)"
+                android:onClick="displayHistory" />
+            <Button
+                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:text="Third Quarter\n(July - Sept)"
+                android:onClick="displayHistory" />
+            <Button
+                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:text="Last Quarter\n(Oct - Dec)"
+                android:onClick="displayHistory" />
 
-            <Spinner
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:popupBackground="#000000"
-                android:id="@+id/timeSpinner"></Spinner>
         </LinearLayout>
-
-    </LinearLayout>
+        </LinearLayout>
 
 </RelativeLayout>
